--- a/challenge-crypto/src/App.css
+++ b/challenge-crypto/src/App.css
@@ -1,6 +1,6 @@
 .App {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   text-align: center;
   background: rgb(0,0,0);
   background: linear-gradient(180deg, rgba(0,0,0,1) 52%, rgba(32,203,1,1) 100%);
